fix button spacing

--- a/resources/css/gather.css
+++ b/resources/css/gather.css
@@ -6,7 +6,7 @@
 
     >.buttons {
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: 1fr 1fr;
 
         @apply gap-2;
 
